[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2018"


[dependencies]
itertools = "0.10.0"
rayon = "1.4.1"
toml = "0.5"
num_cpus = "1.13.0"
serde = { version = "1.0.120", features = ["derive"] }
rand = "0.8.2"
image = "0.23.12"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
nalgebra = "0.24"
crossbeam = "0.8.0"
parking_lot = "0.11.0"
ordered-float = "1.0.3"
exr = "0.9.0"
cpal = "0.13.0"
# pbr = "1.0.3"
minifb = "0.19.1"
statrs = "0.13.0"
math = {path = "crates/math"}
# wgpu = "0.7.0"
winit = "0.24.0"
line_drawing = "0.8.0"

[build-dependencies]
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.55"

[profile.dev]
opt-level = 3
panic='abort'
debug=true

[profile.test]
opt-level = 0

[lib]
name = "lib"
path = "src/lib.rs"

# [[bin]]
# name = "splat"
# path = "src/bin/splat.rs"

# [[bin]]
# name = "splat_v2"
# path = "src/bin/splat_v2.rs"

# [[bin]]
# name = "sim"
# path = "src/bin/sim.rs"

# [[bin]]
# name = "sim2"
# path = "src/bin/sim.rs"
