[package]
name = "rust_playground"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2018"


[dependencies]
itertools = "0.11.0"
rayon = "1.4.1"
toml = "0.8.2"
num_cpus = "1.13.0"
serde = { version = "1.0.120", features = ["derive"] }
rand = "0.8.2"
image = "0.24.3"
# packed_simd = { version = "0.3.8", package = "packed_simd_2" }
packed_simd = "0.3.9"
nalgebra = "0.32.3"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
ordered-float = "4.1.0"
num = "0.4.0"
exr = "0.9.0"
cpal = "0.15.2"
# pbr = "1.0.3"
minifb = { version = "0.25.0", optional = true }
statrs = "0.16.0"
math = { git = "https://github.com/gillett-hernandez/rust_cg_math" }
# wgpu = "0.7.0"
winit = "0.28.7"
line_drawing = "1.0.0"
structopt = "0.3.26"
clap = { version = "4.0.32", features = ["derive"] }
linefeed = "0.6.0"
rustronomy-fits = { version = "0.2.0", optional = true }
ndarray = "*"

[features]
default = ["window", "astro"]
astro = ["rustronomy-fits"]
window = ["minifb"]

[build-dependencies]
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.55"

[profile.dev]
opt-level = 3
panic = 'abort'
debug = true

[profile.test]
opt-level = 0

[lib]
name = "lib"
path = "src/lib.rs"
required-features = ["window"]


[[bin]]
name = "astro"
path = "src/bin/astro.rs"
required-features = ["astro"]


# [[bin]]
# name = "sim"
# path = "src/bin/sim.rs"

# [[bin]]
# name = "sim2"
# path = "src/bin/sim.rs"
